--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "react": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-maps": "^0.31.1",
     "react-redux": "^8.0.1",
     "redux-thunk": "^2.4.1"
   },
