--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "17.0.2",
     "react-native": "0.68.2",
     "react-native-maps": "^0.31.1",
+    "react-native-vector-icons": "^9.1.0",
     "react-redux": "^8.0.1",
     "redux-thunk": "^2.4.1"
   },
