--- a/package.json
+++ b/package.json
@@ -50,6 +50,9 @@
   },
   "jest": {
     "preset": "react-native",
+    "setupFiles": [
+      "<rootDir>/__mocks__/index.js"
+    ],
     "moduleFileExtensions": [
       "ts",
       "tsx",
